<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>xyz.xcye</groupId>
    <artifactId>aurora-theme</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.6.4</version>
        <relativePath/>
    </parent>

    <modules>
        <module>aurora-file</module>
        <module>aurora-comment</module>
        <module>aurora-gateway</module>
        <module>aurora-admin</module>
        <module>aurora-message</module>
        <module>aurora-common</module>
        <module>aurora-spring-boot-starter</module>
    </modules>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <mysql.version>8.0.27</mysql.version>
        <jjwt.version>0.9.1</jjwt.version>
        <!--mybatis-spring-boot-starter-->
        <mybatis.version>2.2.2</mybatis.version>
        <lombok.version>1.18.20</lombok.version>

        <spring-cloud.version>2021.0.1</spring-cloud.version>
        <spring-alibaba-cloud.version>2021.0.1.0</spring-alibaba-cloud.version>
        <hutool.version>5.7.22</hutool.version>
        <spring-cloud-gateway.version>3.1.1</spring-cloud-gateway.version>
        <druid.version>1.2.6</druid.version>
        <springfox.version>3.0.0</springfox.version>
        <springfox-data-rest.version>3.0.0</springfox-data-rest.version>
        <fastjson.version>1.2.80</fastjson.version>
        <jedis.version>3.7.1</jedis.version>
        <pagehelper.version>1.4.0</pagehelper.version>
        <userAgentUtils.version>1.20</userAgentUtils.version>
        <seata.version>1.4.2</seata.version>
        <nacos-client.version>2.0.4</nacos-client.version>
        <kryo.version>4.0.2</kryo.version>
        <kryo-serializers.version>0.44</kryo-serializers.version>
    </properties>

    <!--统一依赖管理-->
    <dependencyManagement>
        <dependencies>
            <!--spring相关-->
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!--阿里巴巴相关-->
            <dependency>
                <groupId>com.alibaba.cloud</groupId>
                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
                <version>${spring-alibaba-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>fastjson</artifactId>
                <version>1.2.79</version>
            </dependency>

            <!--工具类-->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
                <optional>true</optional>
            </dependency>

            <dependency>
                <groupId>cn.hutool</groupId>
                <artifactId>hutool-all</artifactId>
                <version>${hutool.version}</version>
            </dependency>

            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt</artifactId>
                <version>${jjwt.version}</version>
            </dependency>

            <dependency>
                <groupId>com.github.pagehelper</groupId>
                <artifactId>pagehelper-spring-boot-starter</artifactId>
                <version>${pagehelper.version}</version>
            </dependency>

            <!--需要手动引入的数据访问相关依赖-->
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>druid</artifactId>
                <version>${druid.version}</version>
            </dependency>

            <dependency>
                <groupId>org.mybatis.spring.boot</groupId>
                <artifactId>mybatis-spring-boot-starter</artifactId>
                <version>${mybatis.version}</version>
            </dependency>

            <dependency>
                <groupId>mysql</groupId>
                <artifactId>mysql-connector-java</artifactId>
                <version>${mysql.version}</version>
            </dependency>

            <dependency>
                <groupId>io.springfox</groupId>
                <artifactId>springfox-boot-starter</artifactId>
                <version>${springfox.version}</version>
            </dependency>

            <dependency>
                <groupId>io.springfox</groupId>
                <artifactId>springfox-data-rest</artifactId>
                <version>${springfox-data-rest.version}</version>
            </dependency>

            <dependency>
                <groupId>redis.clients</groupId>
                <artifactId>jedis</artifactId>
                <version>${jedis.version}</version>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <dependencies>

    </dependencies>

</project>